--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "license": "ISC",
   "dependencies": {
     "gh-pages": "^2.0.1",
-    "node-sass": "^4.12.0",
-    "tar": "^4.4.8"
+    "node-sass": "^4.12.0"
   }
 }
